# ha-adapt

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  validate.yml
custom_components/ha_adapt/: __init__.py  config_flow.py  const.py  coordinator.py  engine.py  interceptor.py  manifest.json  models.py  panel.py  select.py  services.yaml  store.py  strings.json  switch.py
custom_components/sundial/: __init__.py  config_flow.py  const.py  coordinator.py  engine.py  interceptor.py  manifest.json  models.py  panel.py  select.py  services.yaml  store.py  strings.json  switch.py
custom_components/sundial/translations/: en.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/dev/: engine.ts  main.ts  mock-backend.ts
frontend/src/: api.ts  base-tab.ts  form-fields.ts  ha-adapt-panel.ts  icons.ts  sundial-panel.ts  theme.ts  types.ts  utils.ts
frontend/src/components/: lights-tab.ts  row-preview.ts  schema-editor.ts  schemas-tab.ts  settings-tab.ts  sun-config.ts  timeline-grid.ts
tests/: conftest.py  test_engine.py  test_models.py
