[project]
name = "sundial"
version = "1.0.0"
description = "Adaptive lighting for Home Assistant with a web-ui configuration panel."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["frontend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "B008",  # function calls in argument defaults (HA voluptuous patterns)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["sundial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
